# GreenButton

./: .biome.json  .gitignore  .gitmodules  .oxfmtrc.json  README.md  conftest.py  link.nu  mise.toml  prek.toml  pyproject.toml  taplo.toml
config/: ami.toml  asos_station.json  asos_station.toml  experiment.KEA.points.csv  experiment.toml  sensor.toml  sensor_location.json
docs/: 2026-05-14.typ  ecpm.typ
greenbutton/: cpr.py  imputer.py  imputer_selection.py  misc.py  sensors.py  tsad.py
greenbutton/anomaly/: hampel.py  tsad.py
greenbutton/impute/: imputer.py  imputer_selection.py
greenbutton/impute/imputer/: __init__.py  _imputer.py  imputer.py  misc.py
greenbutton/utils/: __init__.py  _console.py  app.py  console.py  mplutils.py  polarsutils.py
scripts/: config.py  cpr.py  link.nu  sensor.py  seoul_public_building.py  utils.py  visualize_cpm.py  weather.py
scripts/ami/: ami_d04_melt.py  ami_d04_sample.py  ami_example_impute.py  ami_example_selection.py  preprocess.py  public_building.py
scripts/ami/energy_intensive/: ami.py  common.py  config.py  cpr.py  s01ami.py  s01prep.py  s02cpr.py  s03cluster.py
scripts/ami/hybrid/: __init__.py  doc.typ  s01prep.py  s02anomaly.py  s02cpm.py  s03cpm.py  s04inspect.py  s99presentation.py
scripts/ami/impute/: d04_melt.py  d04_sample.py  example_impute.py  example_selection.py
scripts/ami/public_institution/: ami.py  config.py  cpr.py  s01ami.py  s01prep.py  s02_01cpr.py  s02_02cpm.py  s02cpr.py  s03cluster.py  s03cluter.py  s04fallback.py  s10saving_rate.py  s99sample.py  sequential_operation.py
scripts/exp/: copy_after.sql  e01yeonseo.py  e02cheolsan.py  e03_01kepco_paju.py  e03_02db.py  e03_03sequential_operation.py  e03kepco_paju.py  e04yecheon_gov.py  e05neulpum.py  e06kea.py  e07_01keit.py  e07_02diagnosis.py  e07keit.py  e08gcea.py  e09kiria.py  e10energyx.py  e99ean_bems.py  e99integration.py  experiment.py
scripts/exp/building/: e01yeonseo.py  e02cheolsan.py  e03_01kepco_paju.py  e03_02db.py  e03_03sequential_operation.py  e05neulpum.py  e06kea.py  e07_01keit.py  e07_02diagnosis.py  e08gcea.py  e09kiria.py  e10energyx.py  e99ean_bems.py
scripts/exp/ecpm/: ECPM.typ  _s01integration.py  common.py  s01integration.py  s01prep.py  s02ecpm.py  s03presentation.py
scripts/misc/: cpr.py  seoul_public_building.py  visualize_cpm.py  weather_download.py
scripts/validation/: README.md  __init__.py  common.py  s01ean.py  s02kepco_paju.py  s03keit.py  s04yeonseo.py  s05kea.py  s10validate.py
tests/: test_cpr.py  test_hampel.py  test_impute.py  test_misc.py  test_sensors.py  test_tsad.py  test_utils.py
tests/test_anomaly/: test_hampel.py  test_tsad.py
